# openkl

./: .gitignore  CMakeLists.txt  README.md  design-ideas.md  grpc-build-instructions.md  msvc_versions.txt
applications/krylov/: CMakeLists.txt
cdmm/: CMakeLists.txt  Makefile  README.md  helper.cpp  helper.hpp  route_guide_client.cpp  route_guide_server.cpp
common/include/interfaces/: IMemory.hpp  IMemoryManager.hpp  MemoryTypeEnums.hpp  ZoneTypeEnums.hpp
common/include/stillwater/: Context.hpp  automation.hpp  baseTypes.hpp  diagnostics.hpp  exceptions.hpp  statistics.hpp
common/include/stillwater/arch/: Request.hpp
common/include/stillwater/automation/: EventCount.hpp  EventCountSet.hpp  Parameter.hpp  ParameterFactory.hpp  ParameterSet.hpp  ParameterSpaceEnumerator.hpp  ParameterVariant.hpp  ReferenceRegistry.hpp  Registry.hpp  Visitors.hpp  automation_nsmacro.hpp
common/include/stillwater/diagnostics/: ConsoleLogTarget.hpp  DiagContext.hpp  FileLogTarget.hpp  LogTarget.hpp  Logger.hpp  TimeMonitor.hpp  diagnostics_nsmacro.hpp
common/include/stillwater/statistics/: Histogram.hpp  SummaryStatistic.hpp  statistics_nsmacro.hpp
common/src/libraries/: CMakeLists.txt  README.md
common/src/libraries/automation/: CMakeLists.txt  EventCount.cpp  EventCountSet.cpp  Parameter.cpp  ParameterSet.cpp  ParameterSpaceEnumerator.cpp
common/src/libraries/automation/automation-test/: CMakeLists.txt  EventCountTestSuite.cpp  EventCountTestSuite.hpp  LibraryTestSuite.cpp  LibraryTestSuite.hpp  automation-test.cpp
common/src/libraries/diagnostics/: CMakeLists.txt  ConsoleLogTarget.cpp  FileLogTarget.cpp  LogTarget.cpp  Logger.cpp  TimeMonitor.cpp
common/src/libraries/diagnostics/diagnostics-test/: CMakeLists.txt  diagnostics-test.cpp
common/src/libraries/statistics/: CMakeLists.txt  Histogram.cpp
common/src/libraries/statistics/statistics-test/: CMakeLists.txt  HistogramTestSuite.cpp  HistogramTestSuite.hpp  statistics-test.cpp
common/src/srvc/: README.md
demos/: CMakeLists.txt  README.md  cloud_native_cgdfm.cpp  cloud_native_dmm.cpp  cpu_blas.cpp  gpu_blas.cpp  kpu_blas.cpp
docker/: Dockerfile
include/openkl/: README.md  base_types.h  connect.hpp  context.hpp  environment.hpp  execenv.hpp  instruction.hpp  mtl5_shim.hpp  openkl.hpp  openkl_fwd.hpp  target.hpp
include/openkl/mat/: crs_matrix.hpp  dense_matrix.hpp  matrix_output.hpp
include/openkl/proxy/: proxy.hpp
include/openkl/scalar/: update.hpp
include/openkl/shims/: cloud_native_dmm.hpp  kpu.hpp  opencl.hpp  shim.hpp  smp_8way_kpu.hpp  system_shim.hpp
include/openkl/testing/: check_object_content_output.hpp  check_object_info_output.hpp  check_object_output.hpp  check_presence.hpp  check_type.hpp  expect_exception.hpp
include/openkl/utilities/: exception.hpp  exit.hpp  get_object.hpp  object.hpp  object_content.hpp  object_id.hpp  object_info.hpp  object_repo.hpp  quire_type.hpp
include/openkl/vec/: dense_vector.hpp
source/: README.md
source/mat/: create_crs_matrix.cpp  create_dense_matrix.cpp  read_dense_matrix.cpp  write_dense_matrix.cpp
source/openkl/: CMakeLists.txt
source/openkl/mat/: create_crs_matrix.cpp  create_dense_matrix.cpp  read_dense_matrix.cpp  write_dense_matrix.cpp
source/openkl/operations/: crs_matrix_vector_product.cpp  dense_matrix_vector_product.cpp
source/openkl/utilities/: destroy.cpp  object_repo.cpp
source/openkl/vec/: add_dense_vector.cpp  create_dense_vector.cpp  read_dense_vector.cpp  subtract_dense_vector.cpp  write_dense_vector.cpp
source/operations/: dense_matrix_vector_product.cpp
source/proxy/: CMakeLists.txt  proxy.cpp
source/proxy/test_bench/: CMakeLists.txt  test_bench.cpp
source/shims/: CMakeLists.txt  README.md  cloud_native_dmm.cpp  kpu.cpp  shim_cn_dfm.cpp  shim_dkpu.cpp  shim_kpu.cpp  shim_opencl.cpp  shim_smp.cpp
source/shims/dfm/: cn_dfm.cpp
source/shims/dmm/: cn_dmm.cpp
source/shims/kpu/: CMakeLists.txt  kpu.cpp
source/shims/kpu/fabric/: README.md
source/shims/kpu/frontend/: README.md
source/shims/kpu/memory/: CMakeLists.txt  Cache.cpp  Cache.hpp  Memory.cpp  Memory.hpp  MemoryDescriptor.cpp  MemoryDescriptor.hpp  MemoryObject.cpp  MemoryObject.hpp  MobMemory.cpp  MobMemory.hpp  Page.cpp  ReadMe.txt  RequestGenerator.cpp  RequestGenerator.hpp  SConstruct  memory_nsmacro.hpp
source/shims/kpu/memory/memory-test/: CMakeLists.txt  CacheTestSuite.cpp  CacheTestSuite.hpp  MemoryTestSuite.cpp  MemoryTestSuite.hpp  MobMemoryTestSuite.cpp  MobMemoryTestSuite.hpp  PageTestSuite.cpp  PageTestSuite.hpp  ReadMe.txt  memory-test.cpp  stdafx.cpp  stdafx.h
source/shims/kpu/memory/test_bench/: CMakeLists.txt  stdafx.cpp  stdafx.h  test_bench.cpp
source/shims/kpu/test_bench/: CMakeLists.txt  test_bench.cpp
source/shims/kpu/toplevel/: kpu.cpp
source/shims/rkpu/: remote_kpu.cpp
source/shims/smp/: CMakeLists.txt  README.md  smp.cpp
source/shims/smp/toplevel/: smp.cpp
source/utilities/: destroy.cpp  object_repo.cpp
source/vec/: add_dense_vector.cpp  create_dense_vector.cpp  read_dense_vector.cpp  subtract_dense_vector.cpp  write_dense_vector.cpp
spec/: openkl-1.0.docx  openkl-proxy-architecture.docx
tests/: CMakeLists.txt  README.md
tests/mat/: CMakeLists.txt  create_crs_matrix_test.cpp  create_dense_matrix_test.cpp  read_dense_matrix_test.cpp  write_dense_matrix_test.cpp
tests/operations/: CMakeLists.txt  crs_matrix_vector_product_test.cpp  dense_matrix_vector_product_test.cpp
tests/posit/: CMakeLists.txt  cpu_blas.cpp
tests/testing/: CMakeLists.txt  check_presence_test.cpp  check_type_test.cpp
tests/utilities/: CMakeLists.txt  check_type_test.cpp  destroy_test.cpp
tests/vec/: CMakeLists.txt  add_dense_vector_test.cpp  create_dense_vector_test.cpp  read_dense_vector_test.cpp  subtract_dense_vector_test.cpp  write_dense_vector.cpp  write_dense_vector_test.cpp
tools/kdevelop/openkl_class_header/: openkl_class_header.desktop  openkl_class_header.hpp
tools/kdevelop/openkl_class_impl/: openkl_class_impl.cpp  openkl_class_impl.desktop
tools/kdevelop/openkl_test/: openkl_test.cpp  openkl_test.desktop
(+22 files in other folders)
