project (stillwater_common_libs)

# Stillwater diagnostics and logger library
add_subdirectory("diagnostics")
add_subdirectory("diagnostics/diagnostics-test")

# Stillwater statistics library
add_subdirectory("statistics")
add_subdirectory("statistics/statistics-test")

# Stillwater automation library
add_subdirectory("automation")
add_subdirectory("automation/automation-test")
